border function added, minor spacing tweacks, color bugfixes

--- a/styles/color.less
+++ b/styles/color.less
@@ -1,3 +1,20 @@
-h2 {
+h2,
+h3 {
 	color: @contrastColour  !important;
+
+	a {
+		color: @contrastColour  !important;
+	}
+}
+
+.obj_issue_toc {
+	h2 {
+		color: @neutralColour  !important;
+		margin-top: 0 !important;
+	}
+}
+
+p.current_issue_title,
+.published {
+	color: @neutralColour  !important;
 }
