--- a/styles/grid.less
+++ b/styles/grid.less
@@ -178,8 +178,11 @@ body {
 			width: 100%;
 			padding: 0;
 			margin: 0;
-			margin-bottom: @triple;
+			margin-top: @double;
+			padding-bottom: @double;
 		}
+
+
 
 		.homepage_image {
 			grid-row: 1;
@@ -191,14 +194,41 @@ body {
 
 		.cmp_announcements {
 			grid-row: 3;
+
+			.media-list {
+				padding-bottom: 0 !important;
+
+				.summary {
+					padding-bottom: 0 !important;
+				}
+			}
 		}
 
 		.journal-description-below {
 			grid-row: 4;
 		}
 
-		.additional_content {
+		.current_issue {
 			grid-row: 5;
+
+			.title,
+			.meta {
+				margin: 0 !important;
+				padding-top: @base  !important;
+				padding-bottom: @quarter  !important;
+			}
+
+			.authors {
+				margin: 0 0 @double 0 !important;
+			}
+
+			.obj_issue_toc {
+				padding-bottom: 0;
+			}
+		}
+
+		.additional_content {
+			grid-row: 6;
 		}
 	}
 
@@ -210,7 +240,7 @@ body {
 			margin: 0;
 
 			margin-top: @quintuple;
-			margin-bottom: @quintuple;
+			padding-bottom: @quintuple;
 		}
 	}
 }
@@ -242,6 +272,21 @@ body {
 		grid-column-start: 1;
 		grid-column-end: 8;
 		grid-row: 2;
+	}
+
+	.title,
+	.meta {
+		margin: 0 !important;
+		padding-top: @base  !important;
+		padding-bottom: @quarter  !important;
+	}
+
+	.authors {
+		margin: 0 0 @double 0 !important;
+	}
+
+	.obj_issue_toc {
+		padding-bottom: 0;
 	}
 }
 
